[project]
name = "meshkore"
version = "0.1.0"
description = "MeshKore SDK — connect AI agents across networks"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
